** September 30, 2013 **
refactoring module names to follow PEP 8.

Checking modules directly under the vitables package with pylint.

The package docbrowser has been analyzed with pylint.

The package h5db has been analyzed with pylint.

The package nodeprops has been analyzed with pylint.

The package vtwidgets has been analyzed with pylint.

The package vttables has been analyzed with pylint.

** September 25, 2013 **
Refactoring module names to follow PEP 8.
nodeInfo.py -> nodeinfo.py

Refactoring module names to follow PEP 8.
linkPropDlg.py -> linkpropdlg.py

Refactoring module names to follow PEP 8.
leafPropPage.py -> leafproppage.py

Refactoring module names to follow PEP 8.
leafPropDlg.py -> leafpropdlg.py

Refactoring module names to follow PEP 8.
groupPropPage.py -> groupproppage.py

Refactoring module names to follow PEP 8.
groupPropDlg.py -> grouppropdlg.py

Refactoring module names to follow PEP 8.
attrPropDlg.py -> attrpropdlg.py

Refactoring module names to follow PEP 8.
attrEditor.py -> attreditor.py

Refactoring module names to follow PEP 8.
tnodeEditor.py -> tnode_editor.py

Refactoring module names to follow PEP 8.
tlinkEditor.py -> tlink_editor.py

Refactoring module names to follow PEP 8.
rootGroupNode.py -> rootgroupnode.py

Refactoring module names to follow PEP 8.
nodeItemDelegate.py -> nodeitemdelegate.py

Refactoring module names to follow PEP 8.
linkNode.py -> linknode.py

Refactoring module names to follow PEP 8.
leafNode.py -> leafnode.py

Refactoring module names to follow PEP 8.
groupNode.py -> groupnode.py

Refactoring module names to follow PEP 8.
dbsTreeView.py -> dbstreeview.py

Refactoring module names to follow PEP 8.
dbsTreeModel.py -> dbstreemodel.py

Refactoring module names to follow PEP 8.
bookmarksDlg.py -> bookmarksdlg.py

Refactoring module names to follow PEP 8.
browserGUI.py -> browsergui.py

Refactoring module names to follow PEP 8.
helpBrowser.py -> helpbrowser.py

Refactoring module names to follow PEP 8.