@@ -15,6 +15,8 @@ The package vtwidgets has been analyzed with pylint.
 
 The package vttables has been analyzed with pylint.
 
+The package queries has been analyzed with pylint.
+
 ** September 25, 2013 **
 Refactoring module names to follow PEP 8.
 nodeInfo.py -> nodeinfo.py
